# physikaX

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  build.py
cmake-modules/: FindD3D11.cmake  FindD3D12.cmake  Finddirectxtk12.cmake  Findglfw.cmake  Findgtest.cmake  common-helpers.cmake  phi-scripts.cmake
samples/: CMakeLists.txt
samples/d3d12-basic/: CMakeLists.txt  d3d12-basic.cpp  d3d12-basic.h  main.cpp  readme.md
samples/d3d12-compute-basic/: CMakeLists.txt  d3d12-compute-basic.cpp  d3d12-compute-basic.h  main.cpp
samples/d3d12-lights/: CMakeLists.txt  d3d12-lights.cpp  d3d12-lights.h  frame-resource.cpp  frame-resource.h  lighting.hlsl  main.cpp
samples/d3d12-shapes/: CMakeLists.txt  d3d12-shapes.cpp  d3d12-shapes.h  frame-resource.cpp  frame-resource.h  main.cpp
samples/glfw-init/: main.cpp
src/: CMakeLists.txt
src/app-framework/: CMakeLists.txt  application-win32.cpp
src/app-framework/example/: example-app.cpp
src/app-framework/include/app-framework/: application-win32.h
src/core/: CMakeLists.txt  application-win32.cpp  logger.cpp  timer.cpp
src/core/include/core/: application-win32.h  application.h  input.h  logger.h  timer.h
src/d3d11-basic/: CMakeLists.txt  d3d11-basic.cpp  d3d11-basic.h  main.cpp
src/d3d12-basic/: CMakeLists.txt  d3d12-basic.cpp  d3d12-basic.h  d3d12-util.cpp  d3d12-util.h  primitive-generator.cpp  vertex-data.h
src/d3d12-common/: CMakeLists.txt  d3d12-helpers.cpp
src/d3d12-common/include/d3d12-common/: d3d12-common.h  d3d12-helpers.h
src/d3d12-compute-basic/: CMakeLists.txt  d3d12-compute-basic.cpp  d3d12-compute-basic.h  d3d12-util.cpp  d3d12-util.h  main.cpp
src/examples/: CMakeLists.txt
src/examples/init-d3d12/: CMakeLists.txt  d3d12-app.cpp  d3d12-app.h  d3d12-util.cpp  d3d12-util.h  main.cpp
src/graphics/: CMakeLists.txt  helpers.cpp
src/graphics/include/graphics/: helpers.h  types.h  upload-buffer.h
src/lib/app-framework/: application-win32.cpp
src/lib/app-framework/example/: example-app.cpp  main.cpp
src/lib/app-framework/include/app-framework/: input.h
src/lib/common/: CMakeLists.txt  primitive-generator.cpp
src/lib/common/include/common/: mesh-data.h  primitive-generator.h
src/lib/d3d12-common/: CMakeLists.txt  d3d12-helpers.cpp
src/lib/d3d12-common/include/d3d12-common/: d3d12-common.h  d3d12-helpers.h  d3d12-upload-buffer.h
src/lib/logger/: logger.cpp
src/lib/timer/test/: timer-test.cpp
src/lib/utility/: CMakeLists.txt  camera.cpp
src/lib/utility/include/utility/: camera.h
src/logger/include/logger/: logger.h
src/renderer/: CMakeLists.txt  camera.cpp  primitive-generator.cpp
src/renderer/include/renderer/: camera.h  constant-data.h  primitive-generator.h  types.h
src/samples/d3d12-basic/: CMakeLists.txt  d3d12-basic.cpp  d3d12-basic.h  main.cpp  primitive-generator.cpp  primitive-generator.h
src/samples/d3d12-compute-basic/: CMakeLists.txt  compute-shader.hlsl  d3d12-compute-basic.cpp
src/samples/d3d12-lights/: CMakeLists.txt  d3d12-lights.cpp  d3d12-lights.h  frame-resource.cpp  frame-resource.h  lighting.hlsl  main.cpp
src/samples/d3d12-shapes/: CMakeLists.txt  d3d12-shapes.cpp  d3d12-shapes.h  frame-resource.cpp  frame-resource.h  main.cpp  readme.md  shapes.hlsl
src/samples/glfw-init/: CMakeLists.txt
src/tests/timer/: CMakeLists.txt  timer-test.cpp
src/timer/test/: timer-test.cpp
src/utility/include/utility/: camera.h
