#libraries
add_subdirectory(lib/app-framework)
add_subdirectory(lib/timer)
add_subdirectory(lib/logger)
add_subdirectory(lib/d3d12-common)
add_subdirectory(lib/utility)

# samples
add_subdirectory(samples/glfw-init)
add_subdirectory(samples/d3d11-basic)
add_subdirectory(samples/d3d12-basic)
add_subdirectory(samples/d3d12-compute-basic)
